--- a/themes/strasa/less/bootstrap-variables.less
+++ b/themes/strasa/less/bootstrap-variables.less
@@ -254,7 +254,7 @@
 @dropdown-link-disabled-color: @gray-light;
 
 //** Text color for headers within dropdown menus.
-@dropdown-header-color: @gray-light;
+@dropdown-header-color: @text-color;
 
 //** Deprecated `@dropdown-caret-color` as of v3.1.0
 @dropdown-caret-color: #000;
